// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Completed Tasks Renders Default Render list name 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px dashed #335a6f;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      Completed Tasks
    </h1>
    <ul
      class="c2"
    >
      <li
        class="c3"
        id="task-1"
      >
        <svg
          data-testid="icon-circle"
          fill="#82baa4"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
        </svg>
        Task Circle
      </li>
      <li
        class="c3"
        id="task-2"
      >
        <svg
          data-testid="icon-rectangle"
          fill="#6491a9"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="24"
            width="24"
          />
        </svg>
        Task Rectangle
      </li>
      <li
        class="c3"
        id="task-3"
      >
        <svg
          data-testid="icon-polygon"
          fill="#bac1c4"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="12,0 24,8 19,24 4,24 0,8"
          />
        </svg>
        Task Polygon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Completed Tasks Renders Default Render no tasks 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      No Completed Tasks!
    </h1>
  </div>
</div>
`;

exports[`Completed Tasks Renders Default Render one task 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px dashed #335a6f;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      Completed Tasks
    </h1>
    <ul
      class="c2"
    >
      <li
        class="c3"
        id="task-1"
      >
        <svg
          data-testid="icon-circle"
          fill="#82baa4"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
        </svg>
        Task Circle
      </li>
    </ul>
  </div>
</div>
`;

exports[`Completed Tasks Renders Default Render three tasks 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px dashed #335a6f;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      Completed Tasks
    </h1>
    <ul
      class="c2"
    >
      <li
        class="c3"
        id="task-1"
      >
        <svg
          data-testid="icon-circle"
          fill="#82baa4"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
        </svg>
        Task Circle
      </li>
      <li
        class="c3"
        id="task-2"
      >
        <svg
          data-testid="icon-rectangle"
          fill="#6491a9"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="24"
            width="24"
          />
        </svg>
        Task Rectangle
      </li>
      <li
        class="c3"
        id="task-3"
      >
        <svg
          data-testid="icon-polygon"
          fill="#bac1c4"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="12,0 24,8 19,24 4,24 0,8"
          />
        </svg>
        Task Polygon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Completed Tasks Renders Default Render two tasks 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px dashed #335a6f;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      Completed Tasks
    </h1>
    <ul
      class="c2"
    >
      <li
        class="c3"
        id="task-1"
      >
        <svg
          data-testid="icon-circle"
          fill="#82baa4"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
        </svg>
        Task Circle
      </li>
      <li
        class="c3"
        id="task-2"
      >
        <svg
          data-testid="icon-rectangle"
          fill="#6491a9"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="24"
            width="24"
          />
        </svg>
        Task Rectangle
      </li>
    </ul>
  </div>
</div>
`;

exports[`Completed Tasks Renders correct icons Render circle icon 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px dashed #335a6f;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      Completed Tasks
    </h1>
    <ul
      class="c2"
    >
      <li
        class="c3"
        id="task-1"
      >
        <svg
          data-testid="icon-circle"
          fill="#82baa4"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="12"
          />
        </svg>
        Task Circle
      </li>
    </ul>
  </div>
</div>
`;

exports[`Completed Tasks Renders correct icons Render polygon icon 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px dashed #335a6f;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      Completed Tasks
    </h1>
    <ul
      class="c2"
    >
      <li
        class="c3"
        id="task-3"
      >
        <svg
          data-testid="icon-polygon"
          fill="#bac1c4"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="12,0 24,8 19,24 4,24 0,8"
          />
        </svg>
        Task Polygon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Completed Tasks Renders correct icons Render rectangle icon 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c1 {
  text-align: center;
}

.c2 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px dashed #335a6f;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      Completed Tasks
    </h1>
    <ul
      class="c2"
    >
      <li
        class="c3"
        id="task-2"
      >
        <svg
          data-testid="icon-rectangle"
          fill="#6491a9"
          height="1.5rem"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="24"
            width="24"
          />
        </svg>
        Task Rectangle
      </li>
    </ul>
  </div>
</div>
`;
